2.24.0 (2025-02-06)
-----------------------------
* General
  - Add log info for showing various style presets loading status.
  - Unified preset backup file name format.
  - Add preset file validation for "classes.json" and "compounds.json".
  - Removed "tyre_compound_symbol" option from "units" config.

* [New]Compounds Preset
  - Add new "compounds.json" preset file in "settings" folder, which is used for displaying custom
    tyre compound symbol and heatmap style that matches specific tyre compounds.
  - Add default tyre compound styles for all tyres currently found in "LMU".
  - Add default tyre compound styles for some popular vehicles found in "RF2".
  - Add tyre compounds auto-detection system, which automatically adds missing tyre compounds found
    from all running vehicles to "compounds.json" and assigns closest matched compound symbols.
    A "?" symbol will be displayed if a compound name is not commonly known.
  - "compounds" file name is now reserved for "compounds.json" preset.

* [New]Tyre Compound Editor
  - Add "Tyre Compound Editor" to "Tools" menu in main window, which allows customizing "compounds.json" preset.
    See User Guide "Compounds preset" section for complete usage.

* Classes Preset
  - Extended classes preset structure to support more customization in future.
    The new structure now saves alternative "class name" under "alias" key, and "class color" under "color" key.
  - Old "classes.json" file will be auto-updated to this newer structure,
    and a "classes.json.old" backup file will be created in "settings" folder.

* Vehicle Class Editor
  - Now shows customizable classes styles in table view, including "Class name", "Alias name", "Color" columns.
  - Now supports multi-selection for deleting multiple classes.
  - Now supports classes sorting.

* Delta, Energy, Fuel Module
  - Add "minimum_delta_distance" option, which sets minimum recording distance (in meters) between each delta sample.