@@ -20,6 +20,7 @@
 Pace notes view & player
 """
 
+from __future__ import annotations
 import logging
 
 from PySide2.QtCore import Qt, QBasicTimer
@@ -48,77 +49,75 @@ from ..module_control import mctrl
 from ..userfile.track_notes import QFILTER_TPPN, COLUMN_PACENOTE
 from ._common import QSS_EDITOR_BUTTON
 
-SOUND_FORMATS = "wav", "mp3", "aac"
-
 logger = logging.getLogger(__name__)
 
 
 class PaceNotesPlayer(QMediaPlayer):
     """Pace notes player"""
 
-    def __init__(self, config):
+    def __init__(self, config: dict):
         super().__init__()
-        self._active_state = octrl.state
         self.mcfg = config
+        self._active_state = octrl.state
 
         # Set update timer
         self._update_timer = QBasicTimer()
 
         # Last data
-        self.checked = False
-        self.last_notes_index = None
-        self.play_queue = []
+        self._checked = False
+        self._last_notes_index = None
+        self._play_queue: list[str] = []
+
+    def set_playback(self, enabled: bool):
+        """Set playback state"""
+        self.reset_playback()
+        if enabled:
+            update_interval = max(
+                self.mcfg["update_interval"],
+                cfg.application["minimum_update_interval"],
+            )
+            self._update_timer.start(update_interval, self)
+            logger.info("ACTIVE: pace notes sounds playback")
+        else:
+            self._update_timer.stop()
+            logger.info("STOPPED: pace notes sounds playback")
 
     def reset_playback(self):
         """Reset"""
-        self.checked = False
-        self.last_notes_index = None
-        self.play_queue.clear()
+        self._checked = False
+        self._last_notes_index = None
+        self._play_queue.clear()
         self.stop()
         self.setVolume(self.mcfg["pace_notes_sound_volume"])
-
-    def start_playback(self):
-        """Start playback"""
-        self.reset_playback()
-        update_interval = max(
-            self.mcfg["update_interval"],
-            cfg.application["minimum_update_interval"])
-        self._update_timer.start(update_interval, self)
-        logger.info("ACTIVE: pace notes sounds playback")
-
-    def stop_playback(self):
-        """Stop playback"""
-        self.reset_playback()
-        self._update_timer.stop()
-        logger.info("STOPPED: pace notes sounds playback")
 
     def timerEvent(self, event):
         """Update when vehicle on track"""
         if self._active_state.active:
 
             # Reset switch
-            if not self.checked:
-                self.checked = True
+            if not self._checked:
+                self._checked = True
 
             # Playback
             notes_index = minfo.pacenotes.currentIndex
-            if self.last_notes_index != notes_index:
-                pace_note = minfo.pacenotes.currentNote.get(COLUMN_PACENOTE, None)
-                self.__update_queue(pace_note)
-                self.last_notes_index = notes_index
+            if self._last_notes_index != notes_index:
+                self._last_notes_index = notes_index
+                self.__update_queue(
+                    minfo.pacenotes.currentNote.get(COLUMN_PACENOTE, None)
+                )
 
-            if self.play_queue:
+            if self._play_queue:
                 self.__play_next_in_queue()
 
         else:
-            if self.checked:
+            if self._checked:
                 self.reset_playback()
 
-    def __update_queue(self, pace_note):
+    def __update_queue(self, pace_note: str | None):
         """Update playback queue"""
         if (pace_note is not None
-            and len(self.play_queue) < self.mcfg["pace_notes_sound_max_queue"]):
-            self.play_queue.append(pace_note)
+            and len(self._play_queue) < self.mcfg["pace_notes_sound_max_queue"]):
+            self._play_queue.append(pace_note)
 
     def __play_next_in_queue(self):
         """Play next sound in playback queue"""
@@ -127,19 +126,20 @@ class PaceNotesPlayer(QMediaPlayer):
             if self.position() < self.mcfg["pace_notes_sound_max_duration"] * 1000:
                 return
         # Play next sound in queue
-        pace_note = self.play_queue[0]
+        pace_note = self._play_queue[0]
         sound_path = self.mcfg["pace_notes_sound_path"]
         sound_format = self.mcfg["pace_notes_sound_format"].strip(".")
         self.setMedia(QMediaContent(f"{sound_path}{pace_note}.{sound_format}"))
         self.play()
-        self.play_queue.pop(0)  # remove playing notes from queue
+        self._play_queue.pop(0)  # remove playing notes from queue
 
 
 class PaceNotesControl(QWidget):
     """Pace notes control"""
 
-    def __init__(self):
+    def __init__(self, master):
         super().__init__()
+        self.master = master
         self.mcfg = cfg.user.setting["pace_notes_playback"]
         self.pace_notes_player = PaceNotesPlayer(self.mcfg)
 
@@ -165,10 +165,7 @@ class PaceNotesControl(QWidget):
         label_format = QLabel("Sound Format:")
         self.combobox_format = QComboBox()
         self.combobox_format.setEditable(True)
-        self.combobox_format.addItems(SOUND_FORMATS)
-        button_setformat = QPushButton("Set")
-        button_setformat.setStyleSheet(QSS_EDITOR_BUTTON)
-        button_setformat.clicked.connect(self.set_playback_setting)
+        self.combobox_format.addItems(("wav", "mp3", "aac"))
 
         # Global Offset
         label_offset = QLabel("Global Offset:")
@@ -177,9 +174,6 @@ class PaceNotesControl(QWidget):
         self.spinbox_offset.setSingleStep(1)
         self.spinbox_offset.setDecimals(2)
         self.spinbox_offset.setSuffix("m")
-        button_setoffset = QPushButton("Set")
-        button_setoffset.setStyleSheet(QSS_EDITOR_BUTTON)
-        button_setoffset.clicked.connect(self.set_playback_setting)
 
         # Max playback duration per sound
         label_max_duration = QLabel("Max Duration:")
@@ -188,9 +182,6 @@ class PaceNotesControl(QWidget):
         self.spinbox_max_duration.setSingleStep(1)
         self.spinbox_max_duration.setDecimals(3)
         self.spinbox_max_duration.setSuffix("s")
-        button_setduration = QPushButton("Set")
-        button_setduration.setStyleSheet(QSS_EDITOR_BUTTON)
-        button_setduration.clicked.connect(self.set_playback_setting)
 
         # Max playback queue
         label_max_queue = QLabel("Max Queue:")
@@ -198,9 +189,6 @@ class PaceNotesControl(QWidget):
         self.spinbox_max_queue.setRange(1, 50)
         self.spinbox_max_queue.setSingleStep(1)
         self.spinbox_max_queue.setDecimals(0)
-        button_setqueue = QPushButton("Set")
-        button_setqueue.setStyleSheet(QSS_EDITOR_BUTTON)
-        button_setqueue.clicked.connect(self.set_playback_setting)
 
         # Sound volumn slider
         self.label_volume = QLabel("Playback Volume: 0%")
@@ -220,23 +208,17 @@ class PaceNotesControl(QWidget):
         layout_file.addWidget(button_openpath, 3, 1)
 
         layout_inner = QGridLayout()
-        layout_inner.addWidget(label_format, 0, 0, 1, 2)
+        layout_inner.addWidget(label_format, 0, 0)
         layout_inner.addWidget(self.combobox_format, 1, 0)
-        layout_inner.addWidget(button_setformat, 1, 1)
-        layout_inner.setColumnStretch(0, 1)
-        layout_inner.setColumnStretch(2, 1)
 
-        layout_inner.addWidget(label_offset, 0, 2, 1, 2)
-        layout_inner.addWidget(self.spinbox_offset, 1, 2)
-        layout_inner.addWidget(button_setoffset, 1, 3)
+        layout_inner.addWidget(label_offset, 0, 1)
+        layout_inner.addWidget(self.spinbox_offset, 1, 1)
 
-        layout_inner.addWidget(label_max_duration, 2, 0, 1, 2)
+        layout_inner.addWidget(label_max_duration, 2, 0)
         layout_inner.addWidget(self.spinbox_max_duration, 3, 0)
-        layout_inner.addWidget(button_setduration, 3, 1)
 
-        layout_inner.addWidget(label_max_queue, 2, 2, 1, 2)
-        layout_inner.addWidget(self.spinbox_max_queue, 3, 2)
-        layout_inner.addWidget(button_setqueue, 3, 3)
+        layout_inner.addWidget(label_max_queue, 2, 1)
+        layout_inner.addWidget(self.spinbox_max_queue, 3, 1)
 
         layout_setting = QVBoxLayout()
         layout_setting.setContentsMargins(5,5,5,5)
@@ -251,11 +233,16 @@ class PaceNotesControl(QWidget):
         self.frame_control.setLayout(layout_setting)
 
         # Button
+        self.button_apply = QPushButton("Apply")
+        self.button_apply.clicked.connect(self.set_playback_setting)
+
         self.button_toggle = QPushButton("")
         self.button_toggle.setCheckable(True)
         self.button_toggle.clicked.connect(self.toggle_button_state)
 
         layout_button = QHBoxLayout()
+        layout_button.addWidget(self.button_apply)
+        layout_button.addStretch(stretch=1)
         layout_button.addWidget(self.button_toggle)
 
         # Layout
@@ -287,9 +274,7 @@ class PaceNotesControl(QWidget):
             return
         self.file_selector.setText(filename_full)
         self.pace_notes_player.reset_playback()
-        if self.mcfg["pace_notes_file_name"] != filename_full:
-            self.mcfg["pace_notes_file_name"] = filename_full
-            cfg.save()
+        if self.update_config("pace_notes_file_name", filename_full):
             mctrl.reload("module_notes")  # reload path in module notes
 
     def set_sound_path(self):
@@ -300,71 +285,56 @@ class PaceNotesControl(QWidget):
             return
         filename_full = val.relative_path(filename_full)
         self.path_selector.setText(filename_full)
-        if self.mcfg["pace_notes_sound_path"] != filename_full:
-            self.mcfg["pace_notes_sound_path"] = filename_full
-            cfg.save()
+        self.update_config("pace_notes_sound_path", filename_full)
 
     def set_playback_setting(self):
         """Set sound playback setting"""
         sound_format = self.combobox_format.currentText()
-        if self.mcfg["pace_notes_sound_format"] != sound_format:
-            self.mcfg["pace_notes_sound_format"] = sound_format
-            cfg.save()
+        self.update_config("pace_notes_sound_format", sound_format)
 
-        offset = self.spinbox_offset.value()
-        if self.mcfg["pace_notes_global_offset"] != offset:
-            self.mcfg["pace_notes_global_offset"] = offset
-            cfg.save()
+        global_offset = self.spinbox_offset.value()
+        self.update_config("pace_notes_global_offset", global_offset)
 
         max_duration = self.spinbox_max_duration.value()
-        if self.mcfg["pace_notes_sound_max_duration"] != max_duration:
-            self.mcfg["pace_notes_sound_max_duration"] = max_duration
-            cfg.save()
+        self.update_config("pace_notes_sound_max_duration", max_duration)
 
         max_queue = int(self.spinbox_max_queue.value())
-        if self.mcfg["pace_notes_sound_max_queue"] != max_queue:
-            self.mcfg["pace_notes_sound_max_queue"] = max_queue
-            cfg.save()
+        self.update_config("pace_notes_sound_max_queue", max_queue)
 
-    def set_sound_volume(self, value: int):
+    def set_sound_volume(self, volume: int):
         """Set sound volume"""
-        self.label_volume.setText(f"Playback Volume: {value}%")
-        if self.mcfg["pace_notes_sound_volume"] != value:
-            self.mcfg["pace_notes_sound_volume"] = value
-            self.pace_notes_player.setVolume(value)
-            cfg.save()
+        self.label_volume.setText(f"Playback Volume: {volume}%")
+        if self.update_config("pace_notes_sound_volume", volume):
+            self.pace_notes_player.setVolume(volume)
 
     def toggle_selector_state(self, checked: bool):
         """Toggle file selector state"""
         self.checkbox_file.setChecked(checked)
         self.file_selector.setText(self.mcfg["pace_notes_file_name"])
-        if checked:
-            self.file_selector.setDisabled(False)
-            self.button_openfile.setDisabled(False)
-        else:
-            self.file_selector.setDisabled(True)
-            self.button_openfile.setDisabled(True)
-        if self.mcfg["enable_manual_file_selector"] != checked:
-            self.mcfg["enable_manual_file_selector"] = checked
-            cfg.save()
+        self.file_selector.setDisabled(not checked)
+        self.button_openfile.setDisabled(not checked)
+
+        if self.update_config("enable_manual_file_selector", checked):
             mctrl.reload("module_notes")  # reload file in module notes
 
     def toggle_button_state(self, checked: bool):
         """Toggle button state"""
         self.set_enable_state(checked)
-        if self.mcfg["enable"] != checked:
-            self.mcfg["enable"] = checked
-            cfg.save()
+        self.update_config("enable", checked)
 
     def set_enable_state(self, enabled: bool):
         """Set pace notes enabled state"""
-        if enabled:
-            self.button_toggle.setChecked(True)
-            self.button_toggle.setText("Enabled Playback")
-            self.frame_control.setDisabled(False)
-            self.pace_notes_player.start_playback()
-        else:
-            self.button_toggle.setChecked(False)
-            self.button_toggle.setText("Disabled Playback")
-            self.frame_control.setDisabled(True)
-            self.pace_notes_player.stop_playback()
+        self.button_toggle.setText("  Playback Enabled  " if enabled else "  Playback Disabled  ")
+        self.button_toggle.setChecked(enabled)
+        self.button_apply.setDisabled(not enabled)
+        self.frame_control.setDisabled(not enabled)
+        self.pace_notes_player.set_playback(enabled)
+        self.master.notify_pacenotes.setVisible(enabled)
+
+    def update_config(self, key: str, value: int | float | str) -> bool:
+        """Update pace note playback setting, save if changed"""
+        if self.mcfg[key] == value:
+            return False
+        self.mcfg[key] = value
+        cfg.save()
+        return True
